[gd_scene load_steps=8 format=3 uid="uid://dr0y4ox1p0tgo"]

[ext_resource type="Script" uid="uid://dwp2u1hqjqso0" path="res://Scripts/stage.gd" id="1_70rqm"]
[ext_resource type="Texture2D" uid="uid://cfqxk1ghgw4ku" path="res://Assets/847968.jpg" id="2_gu0x3"]
[ext_resource type="PackedScene" uid="uid://cbu1bkk0sv40n" path="res://Scenes/all_buttons.tscn" id="3_70rqm"]
[ext_resource type="PackedScene" uid="uid://cofc7csdh3fep" path="res://Scenes/note.tscn" id="4_xgxar"]
[ext_resource type="PackedScene" uid="uid://drkj3qe1u7vjn" path="res://Scenes/note_pool.tscn" id="5_7nmha"]
[ext_resource type="AudioStream" uid="uid://cfppp4apuh0ei" path="res://Assets/Mass Destruction.mp3" id="6_gu0x3"]
[ext_resource type="FontFile" uid="uid://cbwm3603kuloa" path="res://Assets/VCR_OSD_MONO_1.001.ttf" id="7_gdy8p"]

[node name="Stage2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_70rqm")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.628315, 0.628315, 0.628315, 1)
position = Vector2(574, 315)
scale = Vector2(0.661111, 0.661111)
texture = ExtResource("2_gu0x3")

[node name="AllButtons" parent="." instance=ExtResource("3_70rqm")]
position = Vector2(130, 576)

[node name="Note" parent="." instance=ExtResource("4_xgxar")]
visible = false
position = Vector2(527, 240)

[node name="Timer" type="Timer" parent="."]

[node name="NotePool" parent="." instance=ExtResource("5_7nmha")]

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_gu0x3")

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0407986
anchor_right = -0.0407986
offset_left = 946.0
offset_top = 137.0
offset_right = 1134.0
offset_bottom = 197.0
theme_override_fonts/font = ExtResource("7_gdy8p")
theme_override_font_sizes/font_size = 28
text = "SCORE: 0"
metadata/_edit_use_anchors_ = true

[node name="perfLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 899.0
offset_top = 171.0
offset_right = 1063.0
offset_bottom = 252.0
theme_override_fonts/font = ExtResource("7_gdy8p")
theme_override_font_sizes/font_size = 28
text = "PERFECT: 0"

[node name="goodLabel" type="Label" parent="."]
offset_left = 899.0
offset_top = 197.0
offset_right = 1014.0
offset_bottom = 222.0
theme_override_fonts/font = ExtResource("7_gdy8p")
theme_override_font_sizes/font_size = 28
text = "GOOD: 0"

[node name="missLabel" type="Label" parent="."]
offset_left = 899.0
offset_top = 222.0
offset_right = 1014.0
offset_bottom = 247.0
theme_override_fonts/font = ExtResource("7_gdy8p")
theme_override_font_sizes/font_size = 28
text = "MISS: 0"

[connection signal="Button1" from="AllButtons" to="." method="_on_allButtons_button_1"]
[connection signal="Button2" from="AllButtons" to="." method="_on_all_buttons_button_2"]
[connection signal="Button3" from="AllButtons" to="." method="_on_all_buttons_button_3"]
[connection signal="Button4" from="AllButtons" to="." method="_on_all_buttons_button_4"]
[connection signal="finished" from="MusicPlayer" to="." method="_on_music_player_finished"]
